src/parser/tests/snapshots/parser@paren_excessive.input.snap
---
source: src/parser/mod.rs
assertion_line: 555
expression: asts
input_file: src/parser/tests/inputs/paren_excessive.input
---
- - (((0)))
  - Ok:
      nodes:
        - Expr:
            Lit:
              value:
                UInt64: 0
              ty: ~
  - "0"

