src/parser/tests/snapshots/parser@paren_prec.input.snap
---
source: src/parser/mod.rs
assertion_line: 536
expression: asts
input_file: src/parser/tests/inputs/paren_prec.input
---
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Div
              lhs:
                Expr:
                  BinOp:
                    sym: Add
                    lhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 19
                          ty: ~
                    rhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 21
                          ty: ~
                    ty: ~
              rhs:
                Expr:
                  Lit:
                    value:
                      Int32: 40
                    ty: ~
              ty: ~
  - (/ (+ 19 21) 40)

