src/parser/tests/snapshots/parser@paren_prec_complex.input.snap
---
source: src/parser/mod.rs
assertion_line: 542
expression: asts
input_file: src/parser/tests/inputs/paren_prec_complex.input
---
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Div
              lhs:
                Expr:
                  BinOp:
                    sym: Mul
                    lhs:
                      Expr:
                        Lit:
                          value:
                            U64: 3
                          ty: ~
                    rhs:
                      Expr:
                        BinOp:
                          sym: Sub
                          lhs:
                            Expr:
                              BinOp:
                                sym: Add
                                lhs:
                                  Expr:
                                    Lit:
                                      value:
                                        U64: 19
                                      ty: ~
                                rhs:
                                  Expr:
                                    Lit:
                                      value:
                                        U64: 21
                                      ty: ~
                                ty: ~
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  U64: 5
                                ty: ~
                          ty: ~
                    ty: ~
              rhs:
                Expr:
                  Lit:
                    value:
                      U64: 40
                    ty: ~
              ty: ~
  - (/ (* 3 (- (+ 19 21) 5)) 40)

