src/parser/tests/snapshots/parser@single_num.input.snap
---
source: src/parser/mod.rs
assertion_line: 472
expression: asts
input_file: src/parser/tests/inputs/single_num.input

---
- - Ok:
      - Expr:
          U64: 19
  - "19"

