src/parser/tests/snapshots/parser@unary_ops.input.snap
---
source: src/parser/mod.rs
assertion_line: 555
expression: asts
input_file: src/parser/tests/inputs/unary_ops.input
---
- - "-21"
  - Ok:
      nodes:
        - Expr:
            UnOp:
              sym: Sub
              rhs:
                Expr:
                  Lit:
                    value:
                      UInt64: 21
                    ty: ~
              ty: ~
  - (- 21)
- - "-a * 2"
  - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Mul
              lhs:
                Expr:
                  UnOp:
                    sym: Sub
                    rhs:
                      Expr:
                        Ident:
                          name: a
                          ty: ~
                    ty: ~
              rhs:
                Expr:
                  Lit:
                    value:
                      UInt64: 2
                    ty: ~
              ty: ~
  - (* (- a) 2)
- - 3 - -21
  - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Sub
              lhs:
                Expr:
                  Lit:
                    value:
                      UInt64: 3
                    ty: ~
              rhs:
                Expr:
                  UnOp:
                    sym: Sub
                    rhs:
                      Expr:
                        Lit:
                          value:
                            UInt64: 21
                          ty: ~
                    ty: ~
              ty: ~
  - (- 3 (- 21))
- - "-4 ^ 2"
  - Ok:
      nodes:
        - Expr:
            UnOp:
              sym: Sub
              rhs:
                Expr:
                  BinOp:
                    sym: Pow
                    lhs:
                      Expr:
                        Lit:
                          value:
                            UInt64: 4
                          ty: ~
                    rhs:
                      Expr:
                        Lit:
                          value:
                            UInt64: 2
                          ty: ~
                    ty: ~
              ty: ~
  - (- (^ 4 2))
- - "--21"
  - Ok:
      nodes:
        - Expr:
            UnOp:
              sym: Sub
              rhs:
                Expr:
                  UnOp:
                    sym: Sub
                    rhs:
                      Expr:
                        Lit:
                          value:
                            UInt64: 21
                          ty: ~
                    ty: ~
              ty: ~
  - (- (- 21))
- - "*2"
  - Err:
      message: "Unknown unary operator: *"
      line: 0
      column: 0
  - "Parsing error: Unknown unary operator: *"

